--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ button {
 }
 
 .error-screen {
-    background-color: black;
-    color: red;
+    background-color: blue;
+    color: white;
     text-align: center;
     font-size: 30px;
     height: 100vh;
